# GeminiRAG

./: .env.example  README.md  main.py  pyproject.toml
llm/: __init__.py  model.py
